RESOLVED FIXED28963
AX notifications should be an ENUM type instead of strings
https://bugs.webkit.org/show_bug.cgi?id=28963
Summary AX notifications should be an ENUM type instead of strings
chris fleizach
Reported 2009-09-03 20:36:10 PDT
right now AX notifications are string literals that match exactly with the strings used on the mac platform. it would be better to be an ENUM type that could then use public API
Attachments
patch (15.09 KB, patch)
2009-09-08 22:21 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-09-08 22:21:44 PDT
Darin Adler
Comment 2 2009-09-09 07:42:40 PDT
Comment on attachment 39245 [details] patch > + // Notifications. Use strings provided for consistency. What does "Use strings provided for consistency" mean? Who should use strings, for what? > + enum AXNotification { > + AXCheckedStateChanged = 1, Why the = 1 here? I recommend leaving that out unless you have some need for a zero value. r=me
chris fleizach
Comment 3 2009-09-09 23:41:08 PDT
Note You need to log in before you can comment on or make changes to this bug.