AX notifications should be an ENUM type instead of strings https://bugs.webkit.org/show_bug.cgi?id=28963

Build fix for Qt.

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::postNotification):
(WebCore::AXObjectCache::postPlatformNotification):



Canonical link: https://commits.webkit.org/39814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48245 268f45cc-cd09-0410-ab3c-d52691b4dbfc